# NaPyTau

./: 404.html  LICENSE  README.md  example_data.txt  index.html  mypy.ini  pyproject.toml  ruff.toml
.github/: pull_request_template.md
.github/workflows/: build_docs.yml  ci.yml  release.yml
Core/current_issues/: index.html
Core/file_responsibilities/: index.html
Core/general/: index.html
Import&Export/components/crawler/: index.html
Import&Export/components/factory/: index.html
Import&Export/components/reader/: index.html
Import&Export/general/: index.html
Import&Export/model/datapoint/: index.html
Import&Export/model/datapoint_collection/: index.html
Import&Export/model/dataset/: index.html
Import&Export/model/error_value_pair/: index.html
Import&Export/model/polynomial/: index.html
Import&Export/model/relative_velocity/: index.html
docs/: README.md  mkdocs.yml
docs/docs/: index.md
docs/docs/Core/: current_issues.md  file_responsibilities.md  general.md
docs/docs/Import&Export/: general.md
docs/docs/gui/: App.md  CheckboxPanel.md  ControlPanel.md  Graph.md  Logger.md  Toolbar.md
gui/App/: index.html
gui/CheckboxPanel/: index.html
gui/ControlPanel/: index.html
gui/Graph/: index.html
gui/Logger/: index.html
gui/Toolbar/: index.html
gui/model/Color/: index.html
gui/model/CustomToolbar/: index.html
gui/model/LogMessageType/: index.html
gui/model/MarkerFactory/: index.html
napytau/: main.py
napytau/cli/: cli_arguments.py  parser.py
napytau/core/: chi.py  core.py  delta_tau.py  logic_mockup.py  polynomials.py  tau.py  tau_final.py  time.py
napytau/core/errors/: core_error.py  polynomial_coefficient_error.py
napytau/gui/: app.py  ui_mockup.py
napytau/gui/components/: Toolbar.py  checkbox_panel.py  control_panel.py  graph.py  logger.py  menu_bar.py  toolbar.py
napytau/gui/model/: checkbox_datapoint.py  color.py  custom_toolbar.py  log_message_type.py  marker_factory.py
napytau/headless/: headless_kernel.py  headless_mockup.py  logging.py
napytau/import_export/: import_export.py  import_export_error.py
napytau/import_export/crawler/: crawler.py  (+3 more)
napytau/ingest/: ingest_mockup.py
napytau/util/: coalesce.py
search/: search_index.json
tests/: main_test.py
tests/cli/: cli_arguments_test.py  parser_test.py
tests/core/: chi_test.py  core_test.py  delta_tau_test.py  polynomials_test.py  tau_final_test.py  tau_test.py
tests/import_export/: import_export_test.py
tests/util/: coalesce_test.py
tools/: prepare_release.py  release.py
(+53 files in other folders)
