[project]
name = "napytau"
version = "0.1.0"
description = "A modern reimplementation of napatau"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.2",
    "matplotlib>=3.9.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.tomlscript]
run= "uv run napytau/main.py"
test = "uv run pytest -rA"
lint = "uv run ruff check"
lint-fix = "uv run ruff check --fix"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "ruff>=0.8.0",
]
