[project]
name = "napytau"
version = "1.0.2"
description = "A modern reimplementation of napatau"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "jsonschema>=4.23.0",
    "matplotlib>=3.10.0",
    "mkdocs-material>=9.5.49",
    "numpy>=2.2.0",
    "scipy>=1.14.1",
]

[build-system]
requires = ["setuptools>=42", "wheel", "nuitka", "toml"]
build-backend = "nuitka.distutils.Build"

[tool.setuptools]
packages = ["napytau"]

[tool.tomlscript]
run= "uv run napytau/main.py"
test = "uv run pytest -rA tests/{filter: }"
lint = "uv run ruff check --config ruff.toml"
lint-fix = "uv run ruff check --config ruff.toml --fix"
format = "uv run ruff format"
typecheck = "uv run mypy napytau --config-file=mypy.ini"
# Run prepare-release with --type {type} where {type} is one of patch, minor, major
# After the resulting pull request is merged, run release to create a new release
# Run both commands from the main branch and the root of the repository
prepare-release = "uv run tools/prepare_release.py --type {type}"
release = "uv run tools/release.py"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
